Fix weird header behavior on smaller screens

--- a/css/harptab-specific.css
+++ b/css/harptab-specific.css
@@ -6,12 +6,13 @@
 .header {
     left: 0;
     right: 0;
-    padding: 5px;
-    padding-top: 10px;
-    margin-bottom: 1em;
+    padding: 0.5rem;
+    margin-bottom: 1rem;
     background-color: var(--primary-background);
     color: var(--primary-foreground);
     vertical-align: middle;
+    overflow: hidden;
+    height: 5rem;
 }
 
 #header-logo {
